Finalisation responsive Desktop

--- a/rest3.html
+++ b/rest3.html
@@ -40,132 +40,135 @@
                 </div>
             </div>
 
-            <h4 class="menu__subtitle">ENTRÉES</h4>
-            <div class="menu__box">
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Tartare de poulpe acidulé</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Aux zests d'orange</p>
-                            <p class="menu__box--prix">25€</p>
-                        </div>      
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Velouté de légumes d'antan</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Carotte, panais, topinambour</p>
-                            <p class="menu__box--prix">35€</p>
+            <div class="menu__wrapper"> 
+                
+                <div class="menu__box">
+                    <h4 class="menu__subtitle">ENTRÉES</h4>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Tartare de poulpe acidulé</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Aux zests d'orange</p>
+                                <p class="menu__box--prix">25€</p>
+                            </div>      
                         </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Soupe à l'oignon</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Revisitée</p>
-                            <p class="menu__box--prix">20€</p>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
                         </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Velouté de légumes d'antan</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Carotte, panais, topinambour</p>
+                                <p class="menu__box--prix">35€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Soupe à l'oignon</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Revisitée</p>
+                                <p class="menu__box--prix">20€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+                </div>
+
+                
+                <div class="menu__box">
+                    <h4 class="menu__subtitle">PLATS</h4>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Coquilles Saint-Jacques</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Accompagnées d'une purée de panais</p>
+                                <p class="menu__box--prix">40€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Magret de canard</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Et parmentier de pommes de terres</p>
+                                <p class="menu__box--prix">35€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Pigeonneau d'Ille-et-Vilaine</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Sur son lit de gnocchis aux légumes</p>
+                                <p class="menu__box--prix">44€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="menu__box">
+                    <h4 class="menu__subtitle">DESSERTS</h4>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Pétales de violettes glacés</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Et purée de noisettes</p>
+                                <p class="menu__box--prix">18€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Fondant au chocolat</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Revisité</p>
+                                <p class="menu__box--prix">22€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Millefeuille croustillant</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Myrtilles et pâte d'amande</p>
+                                <p class="menu__box--prix">23€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>    
+                </div>  
             </div>
-
-            <h4 class="menu__subtitle">PLATS</h4>
-            <div class="menu__box">
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Coquilles Saint-Jacques</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Accompagnées d'une purée de panais</p>
-                            <p class="menu__box--prix">40€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Magret de canard</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Et parmentier de pommes de terres</p>
-                            <p class="menu__box--prix">35€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Pigeonneau d'Ille-et-Vilaine</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Sur son lit de gnocchis aux légumes</p>
-                            <p class="menu__box--prix">44€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-            </div>
-
-            <h4 class="menu__subtitle">DESSERTS</h4>
-            <div class="menu__box">
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Pétales de violettes glacés</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Et purée de noisettes</p>
-                            <p class="menu__box--prix">18€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Fondant au chocolat</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Revisité</p>
-                            <p class="menu__box--prix">22€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Millefeuille croustillant</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Myrtilles et pâte d'amande</p>
-                            <p class="menu__box--prix">23€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>    
-            </div>  
 
             <div class="order">
                 <a class="order--btn">Commander</a>
