--- a/rest4.html
+++ b/rest4.html
@@ -40,132 +40,135 @@
                 </div>
             </div>
 
-            <h4 class="menu__subtitle">ENTRÉES</h4>
-            <div class="menu__box">
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Tartare de thon</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Assaisonné au yuzu</p>
-                            <p class="menu__box--prix">25€</p>
-                        </div>      
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
+            <div class="menu__wrapper">
 
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Bouchée de homard croustillant</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Et sa farandole de petits légumes</p>
-                            <p class="menu__box--prix">35€</p>
+                <div class="menu__box">
+                    <h4 class="menu__subtitle">ENTRÉES</h4>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Tartare de thon</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Assaisonné au yuzu</p>
+                                <p class="menu__box--prix">25€</p>
+                            </div>      
                         </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
 
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Velouté de cèpes</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Aux truffes</p>
-                            <p class="menu__box--prix">20€</p>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Bouchée de homard croustillant</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Et sa farandole de petits légumes</p>
+                                <p class="menu__box--prix">35€</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Velouté de cèpes</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Aux truffes</p>
+                                <p class="menu__box--prix">20€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+                </div>
+
+                
+                <div class="menu__box">
+                    <h4 class="menu__subtitle">PLATS</h4>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Poulet rôti aux herbes de provence</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Et sa crème de truffe</p>
+                                <p class="menu__box--prix">40€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Langouste rôtie</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Et ses légumes de saison</p>
+                                <p class="menu__box--prix">35€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Côte de boeuf angus</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Et sa purée de panais</p>
+                                <p class="menu__box--prix">44€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="menu__box">
+                    <h4 class="menu__subtitle">DESSERTS</h4>
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Farandole de desserts</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Du chef</p>
+                                <p class="menu__box--prix">18€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Crème brulée</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">Revisitée</p>
+                                <p class="menu__box--prix">22€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>
+
+                    <a href="#" class="menu__box--btn">
+                        <div class="menu__box--content">
+                            <p class="menu__box--plat">Tiramisu</p>
+                            <div class="menu__box--sub">
+                                <p class="menu__box--misc">À la noisette</p>
+                                <p class="menu__box--prix">23€</p>
+                            </div>
+                        </div>
+                        <div class="menu__box--validate">
+                            <i class="fa-solid fa-circle-check fa-lg"></i>
+                        </div>
+                    </a>    
+                </div>  
             </div>
-
-            <h4 class="menu__subtitle">PLATS</h4>
-            <div class="menu__box">
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Poulet rôti aux herbes de provence</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Et sa crème de truffe</p>
-                            <p class="menu__box--prix">40€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Langouste rôtie</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Et ses légumes de saison</p>
-                            <p class="menu__box--prix">35€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Côte de boeuf angus</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Et sa purée de panais</p>
-                            <p class="menu__box--prix">44€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-            </div>
-
-            <h4 class="menu__subtitle">DESSERTS</h4>
-            <div class="menu__box">
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Farandole de desserts</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Du chef</p>
-                            <p class="menu__box--prix">18€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Crème brulée</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">Revisitée</p>
-                            <p class="menu__box--prix">22€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>
-
-                <a href="#" class="menu__box--btn">
-                    <div class="menu__box--content">
-                        <p class="menu__box--plat">Tiramisu</p>
-                        <div class="menu__box--sub">
-                            <p class="menu__box--misc">À la noisette</p>
-                            <p class="menu__box--prix">23€</p>
-                        </div>
-                    </div>
-                    <div class="menu__box--validate">
-                        <i class="fa-solid fa-circle-check fa-lg"></i>
-                    </div>
-                </a>    
-            </div>  
 
             <div class="order">
                 <a class="order--btn">Commander</a>
