--- a/rest1.html
+++ b/rest1.html
@@ -19,7 +19,7 @@
                 <a href="./index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
-                <img class="header-rest__logo" src="/images/logo/ohmyfood@2x.svg" alt="ohmyfood">
+                <img class="header-rest__logo" src="images/logo/ohmyfood@2x.svg" alt="ohmyfood">
             </div>    
             <img class="header-rest__img"
                     src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
@@ -41,7 +41,7 @@
             </div>
 
             <div class="menu__wrapper">
-                
+
                 <div class="menu__box">
                     <h4 class="menu__subtitle">ENTRÉES</h4>
                     <a href="#" class="menu__box--btn">
@@ -127,7 +127,6 @@
                     </a>
                 </div>
 
-                
                 <div class="menu__box">
                     <h4 class="menu__subtitle">DESSERTS</h4>
                     <a href="#" class="menu__box--btn">
