--- a/rest4.html
+++ b/rest4.html
@@ -19,7 +19,7 @@
                 <a href="./index.html">
                     <i class="fa-solid fa-arrow-left"></i>
                 </a>
-                <img class="header-rest__logo" src="/images/logo/ohmyfood@2x.svg" alt="ohmyfood">
+                <img class="header-rest__logo" src="images/logo/ohmyfood@2x.svg" alt="ohmyfood">
             </div>    
             <img class="header-rest__img"
                     src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
