--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 <div class="research__box">
                     <div class="research__title">
                         <h2>Réservez le menu qui vous convient</h2>
-                        <span class="research__subtitle">
+                        <div class="research__subtitle">
                             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                        </span>
+                        </div>
                     </div>
 
                     <div class="research__btn">
@@ -49,23 +49,23 @@
                 </div>
 
                 <div class="functioning__btn-box">
-                    <button class="element element-1">
+                    <a class="element element-1">
                         <div class="functioning__numbers">1</div>
                         <i class="fa-solid fa-mobile-screen-button"></i>
                         <h4>Choisissez un restaurant</h4>
-                    </button>
+                    </a>
 
-                    <button class="element element-2">
+                    <a class="element element-2">
                         <div class="functioning__numbers">2</div>
                         <i class="fa-solid fa-list-ul"></i>
                         <h4>Composez votre menu</h4>
-                    </button>
+                    </a>
 
-                    <button class="element element-3">
+                    <a class="element element-3">
                         <div class="functioning__numbers">3</div>
                         <i class="fa-solid fa-store"></i>
                         <h4>Dégustez au restaurant</h4>
-                    </button>
+                    </a>
                 </div>    
             </section>
 
@@ -167,9 +167,8 @@
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li><a href="mailto:contact@ohmyfood.com">Contact</li>
+                    <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
                 </ul>
             </footer>
     </body>
-
 </html>
