Amélioration de l'indentation et rajout de commentaires

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="public/css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +18,7 @@
             <div id="progress">
                 <div id="progress__bar"></div>
             </div>
+
             <!--HEADER-->
             <header class="loading_header">
                 <img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood">
@@ -92,7 +94,7 @@
                                         <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
                                     </svg>
                                 </div>
-                                <div class="cards-rest__new">Nouveau</div>
+                                    <div class="cards-rest__new">Nouveau</div>
                             </div>
                         </a>
                     </div>
@@ -113,7 +115,7 @@
                                         <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
                                     </svg>
                                 </div>
-                                <div class="cards-rest__new">Nouveau</div>  
+                                    <div class="cards-rest__new">Nouveau</div>  
                             </div>
                         </a>
                     </div>
