--- a/rest4.html
+++ b/rest4.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="public/css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +44,7 @@
             <div class="menu__wrapper">
 
                 <div class="menu__box">
+
                     <h4 class="menu__subtitle">ENTRÉES</h4>
                     <a href="#" class="menu__box--btn">
                         <div class="menu__box--content">
@@ -82,10 +84,12 @@
                             <i class="fa-solid fa-circle-check fa-lg"></i>
                         </div>
                     </a>
+
                 </div>
 
                 
                 <div class="menu__box">
+
                     <h4 class="menu__subtitle">PLATS</h4>
                     <a href="#" class="menu__box--btn">
                         <div class="menu__box--content">
@@ -125,9 +129,11 @@
                             <i class="fa-solid fa-circle-check fa-lg"></i>
                         </div>
                     </a>
+
                 </div>
 
                 <div class="menu__box">
+
                     <h4 class="menu__subtitle">DESSERTS</h4>
                     <a href="#" class="menu__box--btn">
                         <div class="menu__box--content">
@@ -167,7 +173,8 @@
                             <i class="fa-solid fa-circle-check fa-lg"></i>
                         </div>
                     </a>    
-                </div>  
+                </div> 
+
             </div>
 
             <div class="order">
