Ajout de liens dans le footer

--- a/rest3.html
+++ b/rest3.html
@@ -187,9 +187,9 @@
         <footer>
             <h4>ohmyfood</h4>
             <ul>
-                <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
-                <li><i class="fa-solid fa-handshake-angle fa-xs"></i>Devenir partenaire</li>
-                <li>Mentions légales</li>
+                <li><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                <li><i class="fa-solid fa-handshake-angle fa-xs"></i><a href="#">Devenir partenaire</a></li>
+                <li><a href="#">Mentions légales</a></li>
                 <li><a href="mailto:contact@ohmyfood.com">Contact</a></li>
             </ul>
         </footer>
