--- a/rest2.html
+++ b/rest2.html
@@ -31,7 +31,7 @@
         <section class="menu">
             <div class="menu__title">
                 <h1>La note enchantée</h1>
-                <div class="icons menu__heart">
+                <div class="menu__heart">
                     <svg class="heart_main" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path d="M14.75 1A5.24 5.24 0 0 0 10 4 5.24 5.24 0 0 0 0 6.25C0 11.75 10 19 10 19s10-7.25 10-12.75A5.25 5.25 0 0 0 14.75 1z"/>
                     </svg>
